objects/Question__c.object
<CustomObject>
    <description>Contains the Questions used during Discovery with association to Dealership Need and Product.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Type_API_Name__c</fullName>
        <formula>TEXT(Answer_Type__c) &amp; &apos;_Answer__c&apos;</formula>
        <label>Answer_Type_API_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Type__c</fullName>
        <label>Answer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiSelect Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YesNo</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloneable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloneable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Of_Question_Dealership_Needs__c</fullName>
        <label>Count Of Question Dealership Needs</label>
        <summaryForeignKey>Discovery_Question_Category__c.Discovery_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Discovery_Question_Products__c</fullName>
        <label>Count of Discovery Question Products</label>
        <summaryForeignKey>Discovery_Question_Product__c.Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dependent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Question</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Question referenced is not active.</errorMessage>
            <filterItems>
                <field>$Source.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Questions Dependent on this Question</relationshipLabel>
        <relationshipName>Questions_Dependent_on_This_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Parent__c</fullName>
        <inlineHelpText>Does this Question have dependent questions?</inlineHelpText>
        <label>Is Parent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>Drive - Baseline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dash - Small Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW - Heavy Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightspeed - Powersports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Agnostic APP - Shared</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values__c</fullName>
        <label>Picklist Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unhook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy / Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-on</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Toggle_Dependent__c</fullName>
        <inlineHelpText>The value for the Parent Question based on which the Child Questions need to be enabled for answering</inlineHelpText>
        <label>Toggle Dependent On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Discovery Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Question_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Business_Office</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Dependent_Question__c</columns>
        <columns>Order__c</columns>
        <columns>Market__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Answer_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Cloneable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order__c</field>
            <operation>startsWith</operation>
            <value>SR101</value>
        </filters>
        <label>Business Office</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dealershipwide</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Dependent_Question__c</columns>
        <columns>Order__c</columns>
        <columns>Market__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Answer_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Cloneable__c</columns>
        <filterScope>Everything</filterScope>
        <label>Dealershipwide</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Parts</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Dependent_Question__c</columns>
        <columns>Order__c</columns>
        <columns>Market__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Answer_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Cloneable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order__c</field>
            <operation>startsWith</operation>
            <value>SA1</value>
        </filters>
        <filters>
            <field>Count_of_Discovery_Question_Products__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Parts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Dependent_Question__c</columns>
        <columns>Order__c</columns>
        <columns>Market__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Answer_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Cloneable__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sales</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Dependent_Question__c</columns>
        <columns>Order__c</columns>
        <columns>Market__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Answer_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Cloneable__c</columns>
        <filterScope>Everything</filterScope>
        <label>Service</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IsParent_AnswerType_Values</fullName>
        <active>true</active>
        <description>When Is Parent is selected as Yes, only &apos;MultiSelect Picklist,&apos; &apos;Picklist,&apos; &apos;YesNo,&apos; and &apos;Checkbox&apos; can be selected for Answer Type.</description>
        <errorConditionFormula>ISPICKVAL(Is_Parent__c,&quot;Yes&quot;) &amp;&amp; ( ISPICKVAL( Answer_Type__c , &quot;Currency&quot; ) || ISPICKVAL( Answer_Type__c , &quot;Date&quot;) || ISPICKVAL( Answer_Type__c , &quot;Number&quot;) || ISPICKVAL( Answer_Type__c , &quot;Text&quot;) || ISPICKVAL( Answer_Type__c , &quot;URL&quot;) ) &amp;&amp; NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c))</errorConditionFormula>
        <errorDisplayField>Answer_Type__c</errorDisplayField>
        <errorMessage>Only &apos;MultiSelect Picklist,&apos; &apos;Picklist,&apos; &apos;YesNo,&apos; and &apos;Checkbox&apos; can be selected for Answer Type when Is Parent is &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IsParent_ToggleDependent_Required</fullName>
        <active>true</active>
        <description>When Is Parent is &apos;Yes&apos;, then a value needs to be specified for Toggle Dependent.</description>
        <errorConditionFormula>ISPICKVAL(Is_Parent__c,&quot;Yes&quot;) &amp;&amp; ISBLANK(Toggle_Dependent__c) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorDisplayField>Toggle_Dependent__c</errorDisplayField>
        <errorMessage>Please enter the Toggle value related to the Answer Type.</errorMessage>
    </validationRules>
</CustomObject>